--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,2 @@
-html{
-    box-sizing: border-box;
-
-}
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
-}
-.box{
-    display: flex;
-
-}
+@import 'vars';
+@import 'global';
