--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,7 +2,7 @@
 @import "global";
 @import "fonts";
 @import "media";
-
+/* start header */
 .header__top-inner {
   display: flex;
   justify-content: space-between;
@@ -51,6 +51,8 @@
     font-size: 14px;
   }
 }
+/* end header */
+/* start search */
 .search-block {
   background-image: url(../images/main-block-bg.jpg);
   height: 533px;
@@ -84,7 +86,7 @@
     margin: 0 auto;
     input {
       padding: 17px 21px;
-      border-radius: 4px; 
+      border-radius: 4px;
       display: block;
       height: 56px;
       width: 100%;
@@ -102,11 +104,121 @@
       right: 10px;
       top: 18px;
       position: absolute;
-      border:none;
+      border: none;
       background-color: transparent;
       outline: none;
-      
     }
   }
+}
+/* end search */
+/* start products */
+.products {
+  padding: 110px 0;
+  background-color: $grey;
+}
+.products__title {
+  color: $bg;
+}
+.products__inner-btn {
+  text-align: center;
+  margin-bottom: 60px;
+  button {
+    padding: 12px 21px;
+    border: none;
+    background-color: #fff;
+    color: $bg;
+    cursor: pointer;
+  }
+  & + button {
+    margin-left: 5px;
+  }
+}
+.products__inner-box{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   
 }
+.products__item {
+  max-width: 442px;
+  width: 100%;
+  box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+  margin-bottom: 30px;
+  &-img {
+    min-height: 250px;
+
+    background-repeat: no-repeat;
+    display: block;
+    background-position: center;
+    background-size: cover;
+  }
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 30px;
+    align-items: center;
+    min-height: 90px;
+    font-weight: 500;
+    border-bottom: 1px solid #e7ecf2;
+  }
+  &-name {
+    max-width: 310px;
+  }
+  &-title {
+    color: $bg;
+    font-weight: 500;
+    font-style: 18px;
+    display: block;
+  }
+  &-category {
+    display: block;
+    font-size: 14ps;
+    color: $green;
+  }
+  &-price {
+    font-style: 20px;
+    color: $bg;
+    font-weight: 700;
+  }
+  &-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 70px;
+    padding: 10px 30px;
+  }
+  &-author {
+    display: flex;
+    align-items: center;
+    .avatar {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-position: center;
+      display: inline-block;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-right: 14px;
+    }
+    .span {
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+.products__bottom-btn{
+  margin: 45px 5px 0;
+  text-align: center;
+button{
+  margin: 45px 5px 0;
+  box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+  border:none;
+  background-color: #fff;
+  color: $bg;
+  padding: 20px 30px;
+  cursor: pointer;
+}
+}
+
+
+/* end products */
