--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -33,6 +33,7 @@ body {
   max-width: 100%;
   margin: 0 auto;
   padding: 0 30px;
+  position: relative;
 }
 @media (max-width: 720px) {
   .container-fluid {
