--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -286,33 +286,40 @@
 /* choose-block starts */
 .choose {
   .container-fluid {
+    
     background-color: $bg;
     height: 613px;
     .choose__inner {
       &-title {
         color: #fff;
-        padding: 120px 0 85px;
+        padding: 120px 0 60px;
       }
     }
   }
 }
-
+.choose__inner-title{
+  margin-bottom: 0px;
+  
+}
 .choose-block {
   display: flex;
+
   justify-content: center;
   align-items: center;
   .block-box + .block-box {
     padding-left: 30px;
   }
   .block-box {
+    
     max-width: 370px;
     .chosse__inner-content {
       transition: all 0.3s;
+
       &:hover {
         .chosse__inner-image {
           path {
             fill: #fff;
-                   }
+          }
         }
         .chosse__inner-image {
           background-color: $green;
@@ -334,7 +341,7 @@
         transition: all 0.3s;
       }
       .chosse__inner-title {
-        padding-bottom: 30px;
+        padding-bottom: 20px;
         @include f500;
         color: #fff;
         font-size: 24px;
